main/glslang: explicitly use samuria instead of ninja

--- a/main/glslang/APKBUILD
+++ b/main/glslang/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=glslang
 pkgver=8.13.3559
-pkgrel=1
+pkgrel=2
 pkgdesc="Khronos reference front-end for GLSL, ESSL, and sample SPIR-V generator"
 options="!check" # Requires git checkout of gmock
 url="https://github.com/KhronosGroup/glslang"
 arch="all"
 license="BSD-3-Clause"
 depends_dev="$pkgname"
-makedepends="cmake ninja python3 bison"
+makedepends="cmake samurai python3 bison"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/KhronosGroup/glslang/archive/$pkgver.tar.gz"
 
