--- a/main/uwsgi/APKBUILD
+++ b/main/uwsgi/APKBUILD
@@ -4,13 +4,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=uwsgi
 pkgver=2.0.18
-pkgrel=5
+pkgrel=6
 pkgdesc="uWSGI application container server"
 url="http://projects.unbit.it/uwsgi/"
 arch="all"
 license="custom" # GPL-2.0-only + linking exception
 depends="mailcap"
-install="uwsgi.pre-install"
+install="$pkgname.pre-install $pkgname.post-upgrade"
 pkgusers="uwsgi"
 pkggroups="uwsgi"
 makedepends="
