communit/[various]: explicit depend on samurai

--- a/community/icinga2/APKBUILD
+++ b/community/icinga2/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=icinga2
 pkgver=2.11.2
-pkgrel=1
+pkgrel=2
 pkgdesc="An open source host, service and network monitoring program"
 url="http://www.icinga.org"
 arch="all !armhf !armv7 !s390x"
 license="GPL-2.0-only"
 depends="monitoring-plugins"
 makedepends="$depends_dev cmake bison flex boost-dev yajl-dev
-	postgresql-dev mariadb-connector-c-dev openssl-dev libedit-dev ninja"
+	postgresql-dev mariadb-connector-c-dev openssl-dev libedit-dev samurai"
 install="$pkgname.pre-install $pkgname.post-install"
 pkgusers="icinga"
 pkggroups="icinga icingacmd"
