--- a/community/kvantum/APKBUILD
+++ b/community/kvantum/APKBUILD
@@ -10,7 +10,7 @@ arch="all"
 license="GPL-2.0-or-later"
 depends="hicolor-icon-theme"
 makedepends="cmake qt5-qtbase-dev qt5-qtsvg-dev qt5-qtx11extras-dev libx11-dev
-	libxext-dev kwindowsystem-dev qt5-qttools-dev ninja"
+	libxext-dev kwindowsystem-dev qt5-qttools-dev samurai"
 source="$pkgname-$pkgver.tar.gz::https://github.com/tsujan/Kvantum/archive/V$pkgver/kvantum-$pkgver.tar.gz"
 builddir="$srcdir/Kvantum-$pkgver/Kvantum"
 
