--- a/community/neko/APKBUILD
+++ b/community/neko/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Andy Li <andy@onthewings.net>
 pkgname=neko
 pkgver=2.3.0
-pkgrel=0
+pkgrel=1
 pkgdesc="High-level dynamically typed programming language"
 url="https://nekovm.org/"
 arch="all"
@@ -10,7 +10,7 @@ license="LGPL"
 depends=""
 depends_dev="neko"
 makedepends="apache2-dev cmake gc-dev gtk+2.0-dev linux-headers mariadb-connector-c-dev
-	mbedtls-dev ninja sqlite-dev"
+	mbedtls-dev samurai sqlite-dev"
 options=""
 install=""
 subpackages="$pkgname-dev $pkgname-libs $pkgname-mysql $pkgname-ui
