--- a/community/spirv-headers/APKBUILD
+++ b/community/spirv-headers/APKBUILD
@@ -3,13 +3,13 @@
 pkgname=spirv-headers
 _pkgname=SPIRV-Headers
 pkgver=1.5.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Machine-readable files for the SPIR-V Registry"
 options="!check" # No testsuite
 url="https://github.com/KhronosGroup/SPIRV-Headers"
 arch="noarch"
 license="GPL-3.0-or-later"
-makedepends="cmake ninja"
+makedepends="cmake samurai"
 source="$pkgname-$pkgver.corrected.tar.gz::https://github.com/KhronosGroup/$_pkgname/archive/$pkgver.corrected.tar.gz"
 
 builddir="$srcdir/$_pkgname-$pkgver.corrected"
