--- a/community/webkit2gtk/APKBUILD
+++ b/community/webkit2gtk/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=webkit2gtk
 pkgver=2.26.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Portable web rendering engine WebKit for GTK+"
 url="https://webkitgtk.org/"
 arch="all"
@@ -15,11 +15,12 @@ makedepends="
 	cmake
 	enchant-dev
 	flex
+	geoclue-dev
 	gnutls-dev
 	gobject-introspection-dev
 	gperf
-	gst-plugins-base-dev
 	gst-plugins-bad-dev
+	gst-plugins-base-dev
 	gstreamer-dev
 	gtk+3.0-dev
 	gtk-doc
@@ -37,16 +38,15 @@ makedepends="
 	libxslt-dev
 	libxt-dev
 	mesa-dev
-	ninja
 	openjpeg-dev
 	openjpeg-tools
 	pango-dev
 	paxmark
 	python2
 	ruby
+	samurai
 	sqlite-dev
 	woff2-dev
-	geoclue-dev
 	"
 replaces="webkit"
 options="!check" # upstream doesn't package them in release tarballs: Tools/Scripts/run-gtk-tests: Command not found
