--- a/community/spirv-tools/APKBUILD
+++ b/community/spirv-tools/APKBUILD
@@ -3,14 +3,14 @@
 pkgname=spirv-tools
 _pkgname=SPIRV-Tools
 pkgver=2019.5
-pkgrel=1
+pkgrel=2
 pkgdesc="API and commands for processing SPIR-V modules"
 options="!check" # Requires git checkout of gtest in external/
 url="https://github.com/KhronosGroup/SPIRV-Tools"
 arch="all"
 license="Apache-2.0"
 depends_dev="spirv-headers $pkgname=$pkgver-r$pkgrel"
-makedepends="$depends_dev cmake ninja python3"
+makedepends="$depends_dev cmake samurai python3"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/KhronosGroup/$_pkgname/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
