community/upx: disable on aarch64, armhf and armv7

--- a/community/upx/APKBUILD
+++ b/community/upx/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.96
 pkgrel=0
 pkgdesc="The Ultimate Packer for eXecutables"
 url="https://upx.github.io"
-arch="all"
+arch="all !aarch64 !armhf !armv7" # Failure to build
 license="GPL-2.0 Public-Domain"
 # perl-dev is used to generate man pages
 makedepends="bash perl-dev ucl-dev zlib-dev"
