--- a/testing/hy/APKBUILD
+++ b/testing/hy/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=hy
 pkgver=0.18.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Dialect of Lisp that's embedded in Python"
 url="http://hylang.org/"
 arch="noarch"
 license="MIT"
-depends="python3 py3-funcparserlib py3-astor py3-rply py3-clint py3-colorama"
+depends="python3 py3-funcparserlib py3-astor py3-rply py3-colorama"
 makedepends="py3-setuptools"
 checkdepends="python3-tests py3-pytest py3-pytest-runner py3-tox"
 source="$pkgname-$pkgver.tar.gz::https://github.com/hylang/hy/archive/$pkgver.tar.gz"
