testing/php7-pecl-mongodb: upgrade to 1.7.1

--- a/testing/php7-pecl-mongodb/APKBUILD
+++ b/testing/php7-pecl-mongodb/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabio Ribeiro <fabiorphp@gmail.com>
 pkgname=php7-pecl-mongodb
 _pkgreal=mongodb
-pkgver=1.6.1
+pkgver=1.7.1
 _pkgver=${pkgver/_rc/RC}
 pkgrel=0
 pkgdesc="PHP7 MongoDB driver"
@@ -10,8 +10,9 @@ url="https://pecl.php.net/package/mongodb"
 arch="all"
 license="Apache-2.0"
 depends="php7-json"
-makedepends="openssl-dev pcre-dev php7-dev autoconf re2c"
-source="https://pecl.php.net/get/$_pkgreal-$_pkgver.tgz"
+makedepends="cyrus-sasl-dev icu-dev openssl-dev pcre-dev php7-dev re2c snappy-dev"
+source="https://pecl.php.net/get/$_pkgreal-$_pkgver.tgz
+	fix-ssl.patch"
 builddir="$srcdir"/$_pkgreal-$_pkgver
 provides="php7-mongodb=$pkgver-r$pkgrel" # for backward compatibility
 replaces="php7-mongodb" # for backward compatibility
@@ -30,8 +31,11 @@ check() {
 
 package() {
 	make INSTALL_ROOT="$pkgdir/" install
-	install -d "$pkgdir"/etc/php7/conf.d
-	echo "extension=$_pkgreal.so" > "$pkgdir"/etc/php7/conf.d/$_pkgreal.ini
+
+	local confdir="$pkgdir/etc/php7/conf.d"
+	install -d $confdir
+	echo "extension=$_pkgreal.so" > $confdir/$_pkgreal.ini
 }
 
-sha512sums="cc5e3c79f7af1cd7e3f661dd1b7f69be174b7f8acca13cfa2115d8d200680e8e665649e576742a01311b9b1d4a548442e55367bcb1435a080dbf34138205c945  mongodb-1.6.1.tgz"
+sha512sums="c40dcde291e85e61ee7b299d2e160c1118e184686771f8f9acbfbfb5a0ffac019287bc6ba8e06a24ed93d843b947816230c50bc06d74a7dfc56bc7244ef83ba9  mongodb-1.7.1.tgz
+042316b14cea5aad842cfb5efaeef88af6dac379bc82140701336094d1c05220feabd5997fe16886fd221cd450127ec7f89fdd7d906aabae955eedc2d08f0506  fix-ssl.patch"
