main/directfb: modernize
- Fix linter issues
- Add -static subpackage to fix abuild warning

--- a/main/directfb/APKBUILD
+++ b/main/directfb/APKBUILD
@@ -6,48 +6,49 @@ pkgrel=1
 pkgdesc="Library for hw graphics acceleration, input dev, windowing system on top of the Linux fb device"
 arch="all"
 url="https://github.com/DirectFB/directfb"
-license="LGPL"
+license="LGPL-2.0-or-later"
 makedepends="zlib-dev freetype-dev libdrm-dev libpng-dev perl tslib tslib-dev autoconf automake libtool"
-depends=""
-subpackages="$pkgname-doc $pkgname-dev"
-builddir="${srcdir}/DirectFB-${pkgver}"
+subpackages="$pkgname-doc $pkgname-static $pkgname-dev"
+builddir="$srcdir/DirectFB-$pkgver"
 source="
-    http://sources.webos-ports.org/DirectFB-$pkgver.tar.gz
-    0001-directfb-fix-musl-compile.patch
-    0002-Fix-musl-PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP-comp.patch
-    0003-remove-set-gamma-ramp.patch
-    0004-disable-fusion_dispatch.patch
-    0005-fix-tslib-configure.patch
-    0006-fix-client-gfx_state-initialisation.patch
-    "
+	http://sources.webos-ports.org/DirectFB-$pkgver.tar.gz
+	0001-directfb-fix-musl-compile.patch
+	0002-Fix-musl-PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP-comp.patch
+	0003-remove-set-gamma-ramp.patch
+	0004-disable-fusion_dispatch.patch
+	0005-fix-tslib-configure.patch
+	0006-fix-client-gfx_state-initialisation.patch
+	"
+
+prepare() {
+	default_prepare
+	autoconf
+}
 
 build() {
-    cd "${builddir}"
-    autoconf
-    ./configure --prefix=/usr \
-                --sysconfdir=/etc \
-                --enable-static \
-                --disable-zlib \
-                --disable-x11 \
-                --enable-fbdev \
-                --disable-vnc \
-                --disable-osx \
-                --disable-mesa \
-                --enable-drmkms \
-                --enable-freetype \
-                --with-inputdrivers=input_hub,keyboard,linuxinput,ps2mouse,serialmouse,tslib \
-                --with-gfxdrivers=omap
-    make
+	./configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--enable-static \
+		--disable-zlib \
+		--disable-x11 \
+		--enable-fbdev \
+		--disable-vnc \
+		--disable-osx \
+		--disable-mesa \
+		--enable-drmkms \
+		--enable-freetype \
+		--with-inputdrivers=input_hub,keyboard,linuxinput,ps2mouse,serialmouse,tslib \
+		--with-gfxdrivers=omap
+	make
 }
 
 check() {
-    cd "${builddir}"
-    make check
+	make check
 }
 
 package() {
-    cd "${builddir}"
-    make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="c9ce8ffe7d7d17b0351da6a031db7345f31fb7112545f9352834ad33225a93e6284ef0e576ef5fc595bc9060c1756051322fa20f7b5b3444b68d7f05bd1ba494  DirectFB-1.7.7.tar.gz
