testing/nftlb: add missing dependency on jansson-dev

--- a/testing/nftlb/APKBUILD
+++ b/testing/nftlb/APKBUILD
@@ -8,7 +8,7 @@ url="https://github.com/zevenet/nftlb"
 arch="all"
 license="AGPL-3.0"
 checkdepends="bash"
-makedepends="autoconf automake libev-dev libmnl-dev libtool nftables-dev"
+makedepends="autoconf automake jansson-dev libev-dev libmnl-dev libtool nftables-dev"
 subpackages="$pkgname-openrc"
 source="https://github.com/zevenet/nftlb/archive/v$pkgver/$pkgname-$pkgver.tar.gz
 	$pkgname.initd
