testing/crun: upgrade to 0.12

--- a/testing/crun/APKBUILD
+++ b/testing/crun/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: kohnish <kohnish@gmx.com>
 # Maintainer: kohnish <kohnish@gmx.com>
 pkgname="crun"
-pkgver="0.11"
+pkgver="0.12"
 pkgrel=0
-pkgdesc="crun is a command line utility that performs various operations on container images and image repositories."
+pkgdesc="Command line utility that performs various operations on container images and image repositories"
 url="https://github.com/containers/crun"
 arch="all"
 license="GPL-3.0-only"
@@ -24,4 +24,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="170fe5148af06862c02f070c351f18446097e939e19320585078cd9a5e075c6ef06c2e5e64d394b784b9c3f2fae68d72b2a3dcf78041cc8899bb64045dc72cff  crun-0.11.tar.xz"
+sha512sums="849ae58977f47268f5723a5d2fd1a69c82f63b809cf258c137ff7d23cc18eda85477f2ffebaa2f181005bc4364eea4c86819596a2de26bed3de4e107eb565c79  crun-0.12.tar.xz"
