--- a/community/anytun/APKBUILD
+++ b/community/anytun/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=anytun
-pkgver=0.3.7
-pkgrel=4
+pkgver=0.3.8
+pkgrel=0
 pkgdesc="Secure anycast tunneling protocol implementation for flexible and fault-tolerant VPNs"
 options="!check" # No testsuite
 url="https://www.anytun.org/"
@@ -11,10 +11,8 @@ license="GPL-3.0-or-later"
 depends_dev="openssl-dev boost-dev linux-headers"
 makedepends="$depends_dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
-source="http://www.anytun.org/download/$pkgname-$pkgver.tar.gz
-	fix-werror-compile-flags.patch
+source="http://www.anytun.org/download/anytun-$pkgver.tar.gz
 	fix-iostream.patch
-	boost-1.70.patch
 	$pkgname.initd"
 
 builddir="$srcdir"/$pkgname-$pkgver/src
@@ -29,14 +27,12 @@ build() {
 }
 
 package() {
-	mkdir -p ${pkgdir}/var/run/anytun  ${pkgdir}/var/run/anytun-controld  &>/dev/null
-	make install DESTDIR="${pkgdir}"
-	rm "${pkgdir}"/etc/init.d/$pkgname
-	install -Dm 755 "$srcdir"/$pkgname.initd "${pkgdir}"/etc/init.d/$pkgname
+	mkdir -p $pkgdir/var/run/anytun  $pkgdir/var/run/anytun-controld  &>/dev/null
+	make install DESTDIR="$pkgdir"
+	rm "$pkgdir"/etc/init.d/$pkgname
+	install -Dm 755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 }
 
-sha512sums="bf1cccfd39b5190d7190590346be867de75ac7256d16648887b3988bdc01dccc4e5084cdad57990b753a55c12417a3c34f66a8871da035d79846aecc188e4578  anytun-0.3.7.tar.gz
-25c870750e2358afbf40d9fffb5d53aed84b8d763dd78fe698a124e362cd3d3eb6a850b59cb3bb50b0dbd51dd86944198d4a18b5c8a799561f53e76797e2c1e9  fix-werror-compile-flags.patch
+sha512sums="c1631983c0f1d735792ae1775aedb87241ae94ccd9cda12885790ecb09e0279518d3414c41945f385b2b30ad20db6a4c68fc526d7d6f777f2929c0d23174f699  anytun-0.3.8.tar.gz
 8c2eece0357666867f8cd9c7ef9307bcf88b9172ac033c18bd33ba470b3c19ad722c7eeafcda3a9ae95539d86ab04285fe5d7fa9766630f689c58e2c3fb239c3  fix-iostream.patch
-21a1faa02d2313b2f2f5a58f9873c9b64a4bc7d9dd3f60938651b38446e06a53840371fae935f84b7a13676b8381a942ab16c2feb3a9895654004c8a637a5db9  boost-1.70.patch
 a31455058e0ac60ed9457c79eea789ce19ba49abc200b59c0d8390eb0c3b6f09813177f9b679fb8ac69ac7b0be862e4604d19298ae4cd79925511fff3963e93d  anytun.initd"
