community/nvme-cli: remove systemd files

--- a/community/nvme-cli/APKBUILD
+++ b/community/nvme-cli/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Florian Heigl <florian.heigl@gmail.com>
 pkgname=nvme-cli
 pkgver=1.10.1
-pkgrel=0
+pkgrel=1
 pkgdesc="NVM-Express user space tooling for Linux"
 options="!check" # Requires nose2
 arch="all"
@@ -24,6 +24,7 @@ build() {
 
 package() {
 	make PREFIX=/usr DESTDIR="$pkgdir" install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 bashcomp() {
