community/thunar: remove systemd service

--- a/community/thunar/APKBUILD
+++ b/community/thunar/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=thunar
 pkgver=1.8.12
-pkgrel=0
+pkgrel=1
 pkgdesc="File manager for Xfce"
 url="https://docs.xfce.org/xfce/thunar/start"
 arch="all"
@@ -57,6 +57,7 @@ package() {
 			;;
 		esac
 	done
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="cd27b26796602ea8623c368cd6c8bb53136c09e4a02c37775bed9918c801741e0adb5784151fbf4b93785967a637ffb8b1214b0721f9457de683ebd7718a8767  thunar-1.8.12.tar.bz2
