testing/xf86-input-wacom: remove systemd service

--- a/testing/xf86-input-wacom/APKBUILD
+++ b/testing/xf86-input-wacom/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Ivan Tham <pickfire@riseup.net>
 pkgname=xf86-input-wacom
 pkgver=0.39.0
-pkgrel=0
+pkgrel=1
 pkgdesc="X.org Wacom tablet input driver"
 url="https://github.com/linuxwacom/xf86-input-wacom"
 arch="all"
@@ -24,6 +24,7 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="9ad92c86c4ba3587d68e2107057c89dfe8628c0a2ec882f5a424ab4983c18ff6048489d7f6d3a8de87403744f74de1982de25327fc955bb5c21346a242e0aaa3  xf86-input-wacom-0.39.0.tar.bz2"
