--- a/testing/openscap-daemon/APKBUILD
+++ b/testing/openscap-daemon/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openscap-daemon
 pkgver=0.1.10
-pkgrel=2
+pkgrel=3
 pkgdesc="Manages continuous scans of your infrastructure"
 url="https://www.open-scap.org/tools/openscap-daemon/"
 arch="noarch"
@@ -10,23 +10,20 @@ license="LGPL-2.1-only"
 depends="py3-gobject3"
 makedepends="python3-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/OpenSCAP/$pkgname/archive/$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/OpenSCAP/openscap-daemon/archive/$pkgver.tar.gz
 	python-3.7.patch"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py check
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="93946b390cc95281b606967df783b8be6beb83da9fbca1951f2095dc24abe518440b6f967b29ae2b093536abe9af4effc3776e8d30f0ab2193b923c1bcf54e17  openscap-daemon-0.1.10.tar.gz
