community/xdg-desktop-portal-gtk: remove systemd service

--- a/community/xdg-desktop-portal-gtk/APKBUILD
+++ b/community/xdg-desktop-portal-gtk/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=xdg-desktop-portal-gtk
 pkgver=1.6.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Gtk implementation of xdg-desktop-portal"
 url="https://github.com/flatpak/xdg-desktop-portal-gtk"
 arch="all"
@@ -42,6 +42,7 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="97111e0c14a8cb54d88d0dd8142003b3f1a60e156131cce77deec0f43c936a110eda24c1e8efbb555dad0ad5aafe392d8c5afab80ea96166f616e6255371adc8  xdg-desktop-portal-gtk-1.6.0.tar.xz"
