community/emacs: remove systemd service

--- a/community/emacs/APKBUILD
+++ b/community/emacs/APKBUILD
@@ -94,7 +94,8 @@ doc() {
 		"$subpkgdir"/usr/share/applications \
 		"$subpkgdir"/usr/share/emacs \
 		"$subpkgdir"/usr/share/icons \
-		"$subpkgdir"/var
+		"$subpkgdir"/var \
+		"$subpkgdir"/usr/lib/systemd
 }
 
 _subpackage() {
