community/vino: disable systemd services via configure switch

--- a/community/vino/APKBUILD
+++ b/community/vino/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=vino
 pkgver=3.22.0
-pkgrel=1
+pkgrel=2
 pkgdesc="The GNOME desktop sharing server"
 url="https://wiki.gnome.org/Projects/Vino"
 arch="all"
@@ -21,7 +21,8 @@ build() {
 		--localstatedir=/var \
 		--without-gnutls \
 		--without-gcrypt \
-		--prefix=/usr
+		--prefix=/usr \
+		--with-systemduserunitdir=no
 	make
 }
 
@@ -29,7 +30,6 @@ package() {
 	make DESTDIR="$pkgdir" DATADIRNAME=share install
  	install -m755 -D "$srcdir"/$pkgname.initd \
 		"$pkgdir"/etc/init.d/$pkgname
-	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="29b88e151b0b8c69bce1565ae3ec2e788f48c7645429984329fb2d3daaf03cc5ac100abbf70247bf0516c6d03a3b9aeb78d018c8f1bf35fd241919117fd1105f  vino-3.22.0.tar.xz
