community/evince: disable systemd service

--- a/community/evince/APKBUILD
+++ b/community/evince/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=evince
 pkgver=3.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="simple document viewer for GTK+"
 url="https://wiki.gnome.org/Apps/Evince"
 arch="all !s390x" # Limited by adwaita-icon-theme needing librsvg
@@ -35,7 +35,8 @@ build() {
 		--without-gspell \
 		--enable-introspection \
 		--disable-static \
-		--enable-comics
+		--enable-comics \
+		--with-systemduserunitdir=no
 	make
 }
 
