--- a/community/evolution-data-server/APKBUILD
+++ b/community/evolution-data-server/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=evolution-data-server
 pkgver=3.34.3
-pkgrel=0
+pkgrel=1
 pkgdesc="data server for evolution"
 url="https://projects.gnome.org/evolution"
 arch="all"
@@ -33,6 +33,7 @@ build() {
 		-DENABLE_UOA=OFF \
 		-DENABLE_INTROSPECTION=ON \
 		-DENABLE_VALA_BINDINGS=ON \
+		-DWITH_SYSTEMUSERUNITDIR=no \
 		..
 	make
 }
