community/gnome-session: remove systemd service

--- a/community/gnome-session/APKBUILD
+++ b/community/gnome-session/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-session
 pkgver=3.34.2
-pkgrel=1
+pkgrel=2
 pkgdesc="GNOME session manager"
 url="https://gitlab.gnome.org/GNOME/gnome-session"
 arch="all !s390x !ppc64le"
@@ -33,6 +33,7 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="23388420ee117596b73ac057d2376857db726fb727fdeff4e4f420e7742622e81baef439adb04d8659a6979e5b7043c72ea334c1179974950476489a8c397182  gnome-session-3.34.2.tar.xz
