community/greenbone-security-assistant: remove systemd service

--- a/community/greenbone-security-assistant/APKBUILD
+++ b/community/greenbone-security-assistant/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=greenbone-security-assistant
 _pkgname=gsad
 pkgver=9.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Greenbone Security Assistant (gsa) - OpenVAS web frontend"
 url="http://www.openvas.org/"
 arch="all"
@@ -52,6 +52,7 @@ package() {
 	install -Dm644 "$srcdir/$_pkgname.logrotate" "$pkgdir/etc/logrotate.d/$_pkgname"
 	install -Dm755 "$srcdir/$_pkgname.initd" "$pkgdir/etc/init.d/$_pkgname"
 	install -Dm755 "$srcdir/$_pkgname.confd" "$pkgdir/etc/conf.d/$_pkgname"
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="5f2b955408e0231b96f4b2415df0c76e9003079acd65b9e1c771082999540121ff92a8c17d9529362be8f7fc632d91bd3f48854a5a2d9632efe10fb354361d8e  greenbone-security-assistant-9.0.0.tar.gz
