--- a/testing/phoronix-test-suite/APKBUILD
+++ b/testing/phoronix-test-suite/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Lucas Ramage <ramage.lucas@protonmail.com>
 pkgname=phoronix-test-suite
 pkgver=9.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="The most comprehensive testing and benchmarking platform available for Linux"
 url="https://www.phoronix-test-suite.com"
 arch="noarch"
@@ -15,6 +15,7 @@ options="!check" # no tests
 
 package() {
 	DESTDIR="$pkgdir" ./install-sh
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
 sha512sums="7584f85fb57ca64128d6342c42244fe2498eec51e378bf4265f447b178d24dcde5855b644faa5937953ee262657e24dd5bb689a95e5843c184b205986e29ebce  phoronix-test-suite-9.0.1.tar.gz"
