--- a/community/slim/APKBUILD
+++ b/community/slim/APKBUILD
@@ -2,18 +2,17 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=slim
 pkgver=1.3.6
-pkgrel=9
+pkgrel=10
 pkgdesc="Desktop-independent graphical login manager for X11"
 url="https://sourceforge.net/projects/slim.berlios/files/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 options="!check"
 subpackages="$pkgname-doc"
 makedepends="libxmu-dev libpng-dev libjpeg-turbo-dev libxft-dev
 	cmake libxrandr-dev"
 depends="dbus"
-install=
-source="https://downloads.sourceforge.net/project/slim.berlios/${pkgname}-${pkgver}.tar.gz
+source="https://downloads.sourceforge.net/project/slim.berlios/slim-$pkgver.tar.gz
 	https://dev.alpinelinux.org/~clandmeter/sources/slim-alpinelinux-0.2.0.tar.gz
 	no-slimlock.patch
 	libslim-underlinking.patch
@@ -59,7 +58,7 @@ package() {
 	install -D -m644 ../slim.logrotate "$pkgdir"/etc/logrotate.d/slim
 
 	# remove unused systemd service
-	rm -f "$pkgdir"/usr/lib/systemd
+	rm -rf "$pkgdir"/lib/systemd
 
 	# install our default theme
 	cd "$srcdir"/slim-alpinelinux
