--- a/main/gnupg/APKBUILD
+++ b/main/gnupg/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=gnupg
 pkgver=2.2.19
 _ver=${pkgver/_beta/-beta}
-pkgrel=0
+pkgrel=1
 pkgdesc="GNU Privacy Guard 2 - a PGP replacement tool"
 url="https://www.gnupg.org/"
 arch="all"
@@ -55,6 +55,9 @@ package() {
 	ln -s gpgv "$pkgdir"/usr/bin/gpgv2
 
 	install -m755 tools/gpg-zip "$pkgdir"/usr/bin/gpg-zip
+
+	# Remove docs for systemd-user
+	rm -rf "$pkgdir"/usr/share/doc/gnupg/examples/systemd-user
 }
 
 scdaemon() {
