community/tlp: disable systemd integration

--- a/community/tlp/APKBUILD
+++ b/community/tlp/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=tlp
 _pkgname=TLP
 pkgver=1.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Linux Advanced Power Management"
 url="http://linrunner.de/en/tlp/tlp.html"
 arch="noarch"
@@ -21,7 +21,7 @@ build() {
 }
 
 package() {
-	make DESTDIR="$pkgdir" install-tlp
+	make TLP_WITH_SYSTEMD=0 DESTDIR="$pkgdir" install-tlp
 
 	install -dm755 "$pkgdir"/usr/share/man/man1
 	install -m644 man/*.1 "$pkgdir"/usr/share/man/man1
