community/py3-faker: upgrade to 4.0.0

--- a/community/py3-faker/APKBUILD
+++ b/community/py3-faker/APKBUILD
@@ -1,15 +1,16 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=py3-faker
 _pyname=Faker
-pkgver=3.0.0
+pkgver=4.0.0
 pkgrel=0
 pkgdesc="Python package that generates fake data for you"
 url="https://faker.readthedocs.io/en/master"
 arch="noarch"
 license="MIT"
 depends="py3-dateutil py3-setuptools py3-six py3-text-unidecode"
-checkdepends="py3-email-validator py3-ipaddress py3-mock py3-more-itertools
-	py3-pytest py3-ukpostcodeparser"
+checkdepends="py3-email-validator py3-ipaddress py3-mock py3-freezegun
+	py3-more-itertools py3-pytest py3-ukpostcodeparser py3-validators
+	py3-pytest-runner"
 _pypiprefix="${_pyname%${_pyname#?}}"
 source="https://files.pythonhosted.org/packages/source/$_pypiprefix/$_pyname/$_pyname-$pkgver.tar.gz"
 builddir=$srcdir/$_pyname-$pkgver
@@ -28,6 +29,8 @@ build() {
 }
 
 check() {
+	# Uses random2 which is not packaged
+	rm -f tests/providers/test_ssn.py
 	python3 setup.py test
 }
 
@@ -35,4 +38,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="5f4a8f0977364b6552cf1bb60d02241731fead10aea7baecfe69029fce58eef487722d93a54fc877621f432e6e708104a560b34b5ca84ddc6323d22047035fce  Faker-3.0.0.tar.gz"
+sha512sums="7591ea87071e486773722ef34a00a32ec4d2320c5448c72e63eaa50eda01d5e96e1d1f89c2e1187cdada7d8a267d304aff5683a5a4ca6aee48b417ec28824eeb  Faker-4.0.0.tar.gz"
