--- a/testing/uglify-js/APKBUILD
+++ b/testing/uglify-js/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
-pkgname="uglify-js"
-pkgver=3.7.4
+pkgname=uglify-js
+pkgver=3.7.7
 pkgrel=0
 pkgdesc="JavaScript parser, mangler/compressor and beautifier toolkit"
 url="http://lisperator.net/uglifyjs"
@@ -23,4 +23,4 @@ package() {
 	chown -R root: "$pkgdir" # npm installs as build user
 }
 
-sha512sums="b629d8584f17d507c21f14b59414bcca20de9328525ce3ba47aeb234e09d5097a88f1c70f8f5f6047033fc15b25bb3d0ee9922595c497c811b883c722d6bd41a  uglify-js-3.7.4.tgz"
+sha512sums="15e494fa18bb50b632ea69fc3ca8a8fed5ec7525cddf9966e0a815d9ab31d34933acb53d3e2de802c95c253ef425d8fb3c75f6f601943ce4fafa55c605b7a684  uglify-js-3.7.7.tgz"
