--- a/main/wireless-regdb/APKBUILD
+++ b/main/wireless-regdb/APKBUILD
@@ -1,23 +1,21 @@
 # Contributor: Stefan Wagner <stw@bit-strickerei.de>
 # Maintainer: Stefan Wagner <stw@bit-strickerei.de>
 pkgname=wireless-regdb
-pkgver=2018.05.31
-pkgrel=1
+pkgver=2019.06.03
+pkgrel=0
 pkgdesc="Central Regulatory Domain Database"
 url="https://wireless.wiki.kernel.org/en/developers/regulatory/wireless-regdb"
 arch="noarch"
 license="ISC"
 subpackages="$pkgname-doc"
 options="!check"
-source="https://mirrors.edge.kernel.org/pub/software/network/wireless-regdb/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://mirrors.edge.kernel.org/pub/software/network/wireless-regdb/wireless-regdb-$pkgver.tar.xz"
 
 package() {
-	cd "$builddir"
 	install -D -m644 "$builddir"/regulatory.bin "$pkgdir"/usr/lib/crda/regulatory.bin
 	install -D -m644 "$builddir"/regulatory.bin.5 "$pkgdir"/usr/share/man/man5/regulatory.bin.5
 	install -D -m644 "$builddir"/regulatory.db "$pkgdir"/lib/firmware/regulatory.db
 	install -D -m644 "$builddir"/regulatory.db.p7s "$pkgdir"/lib/firmware/regulatory.db.p7s
 }
 
-sha512sums="fda18edd619b294b125a5c1e04e758c04332c6d1d99ed44574321753294c159bd6c6f0c592ebfd91e99d301467e8ee8b97d1ad595cd56b3902bd5f85acd95b8d  wireless-regdb-2018.05.31.tar.xz"
+sha512sums="73209ca28c59d6760349ffb713f550300e80db1592bae52b6d252ac9401fa2bb2ace7e6c30cf55df7541da9cef4c8587f3790f7aa34529552468e4b63a3d8fdb  wireless-regdb-2019.06.03.tar.xz"
