testing/octave: add makedeps 'curl-dev' and 'openblas-dev'

--- a/testing/octave/APKBUILD
+++ b/testing/octave/APKBUILD
@@ -2,17 +2,17 @@
 # Maintainer:
 pkgname=octave
 pkgver=5.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A high-level language, primarily intended for numerical computations"
 url="https://www.gnu.org/software/octave/"
 arch="all !x86 !ppc64le" # Tex dependencies aren't available for x86
 license="GPL-3.0-or-later"
 subpackages="$pkgname-doc"
-makedepends="autoconf automake libtool bison curl fftw-dev fltk-dev fontconfig-dev
+makedepends="autoconf automake libtool bison curl curl-dev fftw-dev fltk-dev fontconfig-dev
 	freetype-dev gfortran glu-dev gnuplot imagemagick-dev hdf5-dev
-	lapack-dev libsm-dev libltdl lcms2-dev pcre-dev perl pkgconf qt5-qtbase-dev
+	lapack-dev libsm-dev libltdl lcms2-dev openblas-dev pcre-dev perl pkgconf qt5-qtbase-dev
 	readline-dev texinfo zlib-dev texlive texlive-dvi"
-source="https://ftp.gnu.org/gnu/octave/$pkgname-$pkgver.tar.gz
+source="https://ftp.gnu.org/gnu/octave/octave-$pkgver.tar.gz
 	libinterp-deps.patch
 	abs.patch
 	"
