main/clang: make clang-dev depend on clang-extra-tools

--- a/main/clang/APKBUILD
+++ b/main/clang/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=clang
 # Note: Update together with llvm.
 pkgver=9.0.1
-pkgrel=3
+pkgrel=4
 _llvmver=${pkgver%%.*}
 pkgdesc="A C language family front-end for LLVM"
 arch="all"
@@ -26,7 +26,7 @@ makedepends="
 	py3-sphinx
 	"
 checkdepends="diffutils bash"
-depends_dev="$pkgname=$pkgver-r$pkgrel"
+depends_dev="$pkgname=$pkgver-r$pkgrel $pkgname-extra-tools=$pkgver-r$pkgrel"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs
 	$pkgname-analyzer::noarch
 	$pkgname-extra-tools:extra"
