--- a/testing/beancount/APKBUILD
+++ b/testing/beancount/APKBUILD
@@ -2,16 +2,15 @@
 # Maintainer: Keith Maxwell <keith.maxwell@gmail.com>
 pkgname=beancount
 pkgver=2.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Double-Entry Accounting from Text Files"
 url="http://furius.ca/beancount/"
 arch="all"
 license="GPL-2.0-only"
 depends="python3 py3-dateutil py3-ply py3-bottle py3-lxml py3-magic
-	py3-beautifulsoup4 py3-requests py3-chardet
+	py3-beautifulsoup4 py3-requests py3-chardet py3-pytest
 	py3-google-api-python-client"
 makedepends="python3-dev py3-setuptools"
-checkdepends="py3-pytest"
 source="$pkgname-$pkgver.tar.gz::https://bitbucket.org/blais/beancount/get/$pkgver.tar.gz"
 # 0cd71fede0f3347a14ac2b7ed240b74d56a38887 2.2.1
 builddir="$srcdir"/blais-$pkgname-ff1e2616b26a
