testing/grafana: upgrade to 6.6.1
Switch to prebuilt web assets.
Alpine doesn't support crosscompiling packages and grafana doesn't
support building on anything, but linux/amd64. Node build failures
give me nightmares with every update. JS code is executed in
browser (there's no runtime dep on node), it doesn't matter where
it was built.

--- a/testing/grafana/APKBUILD
+++ b/testing/grafana/APKBUILD
@@ -1,20 +1,20 @@
 # Contributor: Konstantin Kulikov <k.kulikov2@gmail.com>
 # Maintainer: Konstantin Kulikov <k.kulikov2@gmail.com>
 pkgname=grafana
-pkgver=6.5.3
+pkgver=6.6.1
 pkgrel=0
-_commit=05025c5495 # git rev-parse --short HEAD
-_stamp=1579080999 # git --no-pager show -s --format=%ct
+_commit=21bf8b71bc # git rev-parse --short HEAD
+_stamp=1580982790 # git --no-pager show -s --format=%ct
 pkgdesc="Open source, feature rich metrics dashboard and graph editor"
 url="https://grafana.com"
 arch="all"
 license="Apache-2.0"
-makedepends="go nodejs yarn python3"
+makedepends="go"
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/grafana/grafana/archive/v$pkgver.tar.gz
-	$pkgname.initd $pkgname.confd
-	iltorb.patch"
+	$pkgname-$pkgver-bin.tar.gz::https://dl.grafana.com/oss/release/grafana-$pkgver.linux-amd64.tar.gz
+	$pkgname.initd $pkgname.confd"
 
 export GOPATH=${GOPATH:-$srcdir/go}
 export GOCACHE=${GOCACHE:-$srcdir/go-build}
@@ -28,15 +28,6 @@ build() {
 	local ldflags="-X main.version=$pkgver -X main.commit=$_commit -X main.buildstamp=$_stamp"
 	go build -ldflags "$ldflags" -mod=vendor -v github.com/grafana/grafana/pkg/cmd/grafana-server
 	go build -ldflags "$ldflags" -mod=vendor -v github.com/grafana/grafana/pkg/cmd/grafana-cli
-
-	# Don't pollute our git repo with grafanas commit hooks.
-	# Also don't try to install phantomjs since it depends on glibc.
-	# This command also acts as "yarn install".
-	# ignore-engines is needed because grafana specifies max node version 11
-	# but alpine ships 12, quick test shows that it works fine.
-	yarn remove --pure-lockfile -W --ignore-engines husky phantomjs-prebuilt
-
-	yarn --ignore-engines build --force
 }
 
 check() {
@@ -53,7 +44,7 @@ package() {
 	cp -r "$builddir/conf" "$builddir/public" "$pkgdir/usr/share/$pkgname/"
 }
 
-sha512sums="ac0363c9120c961d25a9c154deb974a394bf4b8b911d8e5f913aab29cc4361778cf62122d32e6a24542b5800299fd7063c1ec1d6f5d191b65ce3e044fc050554  grafana-6.5.3.tar.gz
+sha512sums="24da98ddec631d6e596ca8fde874cdc2b834a0eacdbca7ae70b6e3511170d3b2dc63eb3a388d1f11c3cff22659b5e71daccff66f23e74c1c26f9cb5e936cfdb2  grafana-6.6.1.tar.gz
+ad2e744b8ebbc4a118cb28a13f78be29d33fe20cb901f431ba1b81cc5b77af5022efd74d393fd8096a4b63dce226a8621c0b0ef53e133921609687e3e2dde7b8  grafana-6.6.1-bin.tar.gz
 b0a781e1b1e33741a97e231c761b1200239c6f1235ffbe82311fe883387eb23bef262ad68256ebd6cf87d74298041b53b947ea7a493cfa5aa814b2a1c5181e13  grafana.initd
-c2afa7f6baf8f468fbd781b0522cbff173bb0c3964eb08fc4a0951d034e8a1f3f9c14798e2ac487b3c20db834110883db8162039b18195e97bb9f4bc5baffc33  grafana.confd
-1fb96e13d337fed497bbd21ab217650bfdc4a2cc340434b26895e94c76033a4ec9d497200d96b17a7a1c867da68cc79b77da49e4fd53222b764f7ccc855cf7de  iltorb.patch"
+c2d9896ae9a9425f759a47aeab42b7c43b63328e82670d50185de8c08cda7b8df264c8b105c5c3138b90dd46e86598b16826457eb3b2979a899b3a508cbe4e8c  grafana.confd"
