testing/kea-hook-userchk-ldap: disable on armhf armv7 s390x

--- a/testing/kea-hook-userchk-ldap/APKBUILD
+++ b/testing/kea-hook-userchk-ldap/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.1.0
 pkgrel=0
 pkgdesc="Kea DHCP hook for checking user access in LDAP"
 url="https://github.com/cvut/kea-hook-userchk-ldap/"
-arch="all"
+arch="all !armhf !armv7 !s390x"  # limited by kea
 license="MPL-2.0"
 makedepends="autoconf automake kea-dev libtool openldap-dev boost-dev log4cplus-dev"
 source="https://github.com/cvut/kea-hook-userchk-ldap/archive/v$pkgver/$pkgname-$pkgver.tar.gz"
