--- a/main/ctags/APKBUILD
+++ b/main/ctags/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=ctags
-pkgver=0_git20191207
-_commit=2ebf5b1bed1f8ce2f2cccec66e613cd33bcee571
+pkgver=0_git20200205
+_commit=0d0ef5f0ce5914f809bb25781c51b6fd3136108a
 pkgrel=0
 pkgdesc="Generator of tags for all types of C/C++ languages"
 url="https://ctags.io/"
@@ -12,8 +12,7 @@ license="GPL-2.0-or-later"
 checkdepends="diffutils python"
 makedepends="autoconf automake pkgconf py3-docutils"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/universal-ctags/ctags/archive/$_commit.tar.gz
-	0001-lregex-fix-meaningless-type-mismatching-between-unsi.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/universal-ctags/ctags/archive/$_commit.tar.gz"
 builddir="$srcdir"/$pkgname-$_commit
 
 # secfixes:
@@ -51,5 +50,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2e4fe3b3bf77e0456298f398a2e16cb3dd116da2c078e09884b8cd40d182a6cb07b88538713c890517535348fb1d9016b3dca46fa6f6a9b18fe784ec7b18ca30  ctags-0_git20191207.tar.gz
-e5c636eaa0bb6371d0ba54fc9777d3f3e488a03baf380509389c6d0488c19dd23eba5dc787d2d6bab13007cfe98ed17dfed5078ea7b94398afebbe5e64a3b6cf  0001-lregex-fix-meaningless-type-mismatching-between-unsi.patch"
+sha512sums="eac10b0cbaf78ed3cf41ee9182b57e6ef1636ffe08820683df412a57556069c62ec9b17be04b47cc3565cc954ca81dbad48a793b550c5501deb2783879d2cb50  ctags-0_git20200205.tar.gz"
