testing/wayfire: upgrade to 0.3.1

--- a/testing/wayfire/APKBUILD
+++ b/testing/wayfire/APKBUILD
@@ -1,17 +1,26 @@
 # Contributor: Danct12 <danct12@disroot.org>
 # Maintainer: Danct12 <danct12@disroot.org>
 pkgname=wayfire
-pkgver=0.3
-pkgrel=1
+pkgver=0.3.1
+pkgrel=0
 pkgdesc="Compiz-clone Wayland compositor"
 url="https://wayfire.org"
 arch="all"
 license="MIT"
 install="$pkgname.post-install"
-makedepends="wlroots-dev glm-dev wf-config-dev meson ninja cmake cairo-dev libexecinfo-dev"
+makedepends="
+	meson
+	wlroots-dev
+	glm-dev
+	wf-config-dev
+	cairo-dev
+	libexecinfo-dev
+	"
 options="!check" # no testsuite
 subpackages="$pkgname-dev"
-source="https://github.com/WayfireWM/$pkgname/releases/download/$pkgver.0/$pkgname-$pkgver.tar.xz"
+source="https://github.com/WayfireWM/wayfire/releases/download/$pkgver/wayfire-$pkgver.tar.xz
+	wlroots.patch
+	"
 
 build() {
 	meson build --prefix=/usr --buildtype=debugoptimized
@@ -24,4 +33,5 @@ package() {
 	install -Dm644 "$builddir/wayfire.desktop" "$pkgdir/usr/share/wayland-sessions/wayfire.desktop"
 }
 
-sha512sums="096d03795d56d336857e844ec9cef68af36c11d1d5dc7e591aaf9be54bf1a58a87e4c23624da58d71a5fe3056a11ffc3e788316ef01fb8c36b862378065ce31a  wayfire-0.3.tar.xz"
+sha512sums="a64ffd15a624202951fb4245a300c5346b54b08905d31441b351888380aa44037f4fffd30330b81b3eeba893cfb558f2c2bc761be510dc7c5e21fd181033f0df  wayfire-0.3.1.tar.xz
+15e6dd683afdc3cec31cd3bbef74587e7bf64c0d6a291ba28ae82acb2ccf11504592f5823fbd7031586aa16564070af126b4dc666cb77c2644ab89c3a28e8c36  wlroots.patch"
