testing/wcm: upgrade to 0.3.1

--- a/testing/wcm/APKBUILD
+++ b/testing/wcm/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Danct12 <danct12@disroot.org>
 # Maintainer: Danct12 <danct12@disroot.org>
 pkgname=wcm
-pkgver=0.3
-pkgrel=1
+pkgver=0.3.1
+pkgrel=0
 pkgdesc="Wayfire Config Manager"
 url="https://wayfire.org"
 arch="all"
 license="MIT"
-makedepends="wf-config-dev meson ninja cmake libxml++-dev gtk+3.0-dev"
+makedepends="wf-config-dev meson libxml++-dev gtk+3.0-dev"
 options="!check" # no testsuite
-source="$pkgname-$pkgver.tar.gz::https://github.com/WayfireWM/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/WayfireWM/wcm/archive/v$pkgver.tar.gz"
 
 build() {
 	meson build --prefix=/usr --buildtype=debugoptimized
@@ -19,4 +19,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="e997d1b0f707cca2d170bc82667fdacd8489eff629931e3af1c03ac2be5461f07c81b54930561b0baaf10f5e632f0939247344ffeedf3c3eef8f03cb74b2fd0d  wcm-0.3.tar.gz"
+sha512sums="890dda758b79ebf376db7dda63a5a1838206bb62bf03b23970ff5ef2e3bf1dce7cc83c37cc4dc41307bade5cb3fae803a96c68f82fed5b25d855c19cfc0b4dd2  wcm-0.3.1.tar.gz"
