--- a/main/screen/APKBUILD
+++ b/main/screen/APKBUILD
@@ -1,20 +1,18 @@
 # Contributor: Michael Mason <ms13sp@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=screen
-pkgver=4.7.0
+pkgver=4.8.0
 pkgrel=0
-pkgdesc="A window manager that multiplexes a physical terminal"
-url="https://ftp.gnu.org/gnu/screen/"
+pkgdesc="Window manager that multiplexes a physical terminal"
+url="https://www.gnu.org/software/screen/"
 arch="all"
 license="GPL-3.0-or-later"
 options="!check"  # No test suite.
 makedepends="ncurses-dev ncurses"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://ftp.gnu.org/gnu/screen/screen-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,7 +25,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 
 	# remove suid root
@@ -38,4 +35,4 @@ package() {
 	install -Dm644 etc/screenrc "$pkgdir"/etc/skel/.screenrc
 }
 
-sha512sums="44c7a33e2ed772ce91998cdc07556ef7b972e5b100335e14702b273a234e437fe6415de459e7b6d34c6086282a432778629047424ef9159ac6fcf26d22b45745  screen-4.7.0.tar.gz"
+sha512sums="770ebaf6ee9be711bcb8a6104b3294f2bf4523dae6683fdc5eac4b3aff7e511be2d922b6b2ad28ec241113c2e4fe0d80f9a482ae1658adc19c8c3a3680caa25c  screen-4.8.0.tar.gz"
