community/brightnessctl: upgrade to 0.5.1

--- a/community/brightnessctl/APKBUILD
+++ b/community/brightnessctl/APKBUILD
@@ -1,23 +1,24 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=brightnessctl
-pkgver=0.4
-pkgrel=1
+pkgver=0.5.1
+pkgrel=0
 pkgdesc="Program to read and control device brightness"
 options="!check" # No testsuite
 url="https://github.com/Hummer12007/brightnessctl"
 arch="all"
 license="MIT"
+makedepends="elogind-dev"
 subpackages="$pkgname-doc"
 install="$pkgname.post-install"
 source="$pkgname-$pkgver.tar.gz::https://github.com/Hummer12007/brightnessctl/archive/$pkgver.tar.gz"
 
 build() {
-	make
+	make ENABLE_SYSTEMD=1
 }
 
 package() {
-	make install DESTDIR="$pkgdir"
+	make install DESTDIR="$pkgdir" ENABLE_SYSTEMD=1
 }
 
-sha512sums="f0e1abe4dd7fc66a7990c0c42ecd9af079ba397fb0a49d339c5927fe639edbce4c30ecfcd16c3e0bf58de2eb4ca611dd1e1ce40eec9f95fe3960189c5e5396d8  brightnessctl-0.4.tar.gz"
+sha512sums="41ac86357b3b5a3d54a043140a6bdb1fb68d5080a16e86692059ad58f4b9134a8532432a3f664c70c665a4ad73ea8a94cc9b88fa84abc28f0356b8b397aaebc7  brightnessctl-0.5.1.tar.gz"
