testing/php7-pecl-grpc: upgrade to 1.27.0

--- a/testing/php7-pecl-grpc/APKBUILD
+++ b/testing/php7-pecl-grpc/APKBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php7-pecl-grpc
 _pkgreal=grpc
-pkgver=1.26.0
+pkgver=1.27.0
 pkgrel=0
 pkgdesc="PHP extension provide a concrete implementation of the gRPC protocol, layered over HTTP/2."
 url="https://pecl.php.net/package/grpc"
 arch="all !s390x !ppc64le"
 license="Apache-2.0"
 depends="php7-common"
-makedepends="php7-dev autoconf re2c openssl-dev zlib-dev"
+makedepends="php7-dev autoconf re2c openssl-dev zlib-dev linux-headers"
 source="https://pecl.php.net/get/$_pkgreal-$pkgver.tgz"
 builddir="$srcdir"/$_pkgreal-$pkgver
 
@@ -29,4 +29,4 @@ package() {
 	echo "extension=$_pkgreal.so" > "$pkgdir"/etc/php7/conf.d/50_$_pkgreal.ini
 }
 
-sha512sums="76ac9edf52fe3dd6024b6d8168eb7f15541a5ef55f04cdcd2c95d8f727cd2304df27cf83265c80933b1d932c7063ead94da0ac1cea4349dc67b32291cfe6533e  grpc-1.26.0.tgz"
+sha512sums="1c3f6a79a6f9a98bddffaf1938c0259767a0f855aa76f502b2a78e95f495f22e74c1914386b4dcb20ba2d8206e015384ee157b43a9b7a5d2e1e6b1fd9c37e7d7  grpc-1.27.0.tgz"
