testing/telegram-desktop: upgrade to 1.9.10

--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 pkgname=telegram-desktop
-pkgver=1.9.9
+pkgver=1.9.10
 pkgrel=0
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
@@ -36,12 +36,14 @@ makedepends="
 	enchant2-dev
 	range-v3-dev
 	python3
+	libdbusmenu-qt-dev
+	tl-expected
 	"
 source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	musl-basename.patch
-	ppc.patch
 	qt-plugin-path.patch
+	no-system-parts.patch
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
 
@@ -88,7 +90,7 @@ package() {
 	done
 }
 
-sha512sums="ba6400e6f5eec5bda6e8a54b43846e695b2cce731cb6b39f17407cc39e3e9b8078d977253d29962671f30e33dbe012f8e40f340f781fd8ca73487e5f2d42e3de  tdesktop-1.9.9-full.tar.gz
+sha512sums="128dc3fd42196ebf61853917914c3d33fb148d3e6b04847ffa6d4df5baa8d9e286e7d25317b0dd2a332f1475f60b5addd19bb6e25a0fa6bbca316c22235569c6  tdesktop-1.9.10-full.tar.gz
 6062602d02e20917c06f17d12bb21bd4a94b23c2a6744a8a05c2c93d41747ba413e110edd344ecd130c28ebaf997ae46b347d239e69f5856ead42318bd5b01cd  musl-basename.patch
-9a3e491e2b2a9ea3f15da3766a2d743bafead7ae1e6a6ca3e6e9c7352dc268221311acd73664e5452622e2bc91cc88a2a7d3b4ebe6634b4da74c54b3bde0bb7f  ppc.patch
-183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch"
+183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
+8f755b797676f56313f3355f7442665f7f03a7a8c1339ef1ab1790db11c0f48ab02b62a6240146772580022305125ffe927b11c94ba711cf7884c9cc4a1f123b  no-system-parts.patch"
