testing/kuserfeedback: disable on armhf
Dependency missing: extra-cmake-modules

--- a/testing/kuserfeedback/APKBUILD
+++ b/testing/kuserfeedback/APKBUILD
@@ -5,7 +5,7 @@ pkgver="1.0.0"
 pkgrel=0
 pkgdesc="Framework for collecting user feedback for applications via telemetry and surveys"
 url="https://kde.org/products/frameworks/"
-arch="all"
+arch="all !armhf"
 license="MIT"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtsvg-dev qt5-qttools-dev"
 makedepends="$depends_dev extra-cmake-modules"
