--- a/community/kaccounts-providers/APKBUILD
+++ b/community/kaccounts-providers/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="Small system to administer web accounts for the sites and services acro
 license="GPL-2.0-or-later"
 depends="kaccounts-integration"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kio-dev ki18n-dev kdeclarative-dev kpackage-dev kaccounts-integration-dev intltool"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-providers-$pkgver.tar.xz
-	fix-online-accounts-google.patch"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-providers-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
 prepare() {
@@ -33,5 +32,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="6905bafdc872054c108ec5f4be0c0deb36f237434fa37531524a5f9e0ae7e884229a547003fab45d2d42c233c38e2a0db6a4c121f0675c7bcfaa75c86feac5b6  kaccounts-providers-19.12.2.tar.xz
-736b84854dad5da887c9d270b8bfe5782ded908c4fa463d7ecfa8218dfdc12956123515e86eb41f75d5427d5ae9c20c194ff5cead62e81afb3bcb59d77235d9c  fix-online-accounts-google.patch"
+sha512sums="6905bafdc872054c108ec5f4be0c0deb36f237434fa37531524a5f9e0ae7e884229a547003fab45d2d42c233c38e2a0db6a4c121f0675c7bcfaa75c86feac5b6  kaccounts-providers-19.12.2.tar.xz"
